# MCBDD

./: README.md  pyproject.toml
module_2/: module_2.ipynb
module_3/: module_3.ipynb
week3/: week3_probabilities_fraenzi_and_friends.ipynb
