[project]
name = "mcbdd"
version = "0.1.0"
description = ""
authors = [
    {name = "denis.schatzmann@students.fhnw.ch",email = "denis.schatzmann@students.fhnw.ch"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "pandas (>=3.0.1,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "chembl-webresource-client (>=0.10.9,<0.11.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "factor-analyzer (>=0.5.1,<0.6.0)",
    "statsmodels (>=0.14.6,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
